Update PanelFeed to display a message when there are no more posts to load. Fix bug in Profile page where there was no bottom-padding resulting in the last post being cut off.

--- a/src/client/scss/components/_PanelFeed.scss
+++ b/src/client/scss/components/_PanelFeed.scss
@@ -14,4 +14,16 @@
 
 		cursor: pointer;
 	}
+	&__end {
+		display: block;
+		width: 100%;
+		padding: 10px;
+		box-sizing: border-box;
+		border-top: 1px solid $blue-mid;
+
+		font-size: 1rem;
+		font-style: italic;
+		text-align: center;
+		color: $text-grey;
+	}
 }
