--- a/src/client/scss/pages/_Profile.scss
+++ b/src/client/scss/pages/_Profile.scss
@@ -15,7 +15,7 @@
 			margin: 0 auto;
 		}
 		.content {
-			padding: 0;
+			padding-top: 0;
 			margin-top: -20px;
 		}
 	}
